# hdl

./: Cargo.toml  build.rs
proto/: messages.proto  register.proto
src/: main.rs
src/lib/: commhandler.rs  lib.rs  msgserver.rs  regserver.rs  ui.rs
